# modrover

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
docs/: .buildinfo  build.py  conf.py  genindex.html  index.html  installation.html  meta.toml  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/modrover/: learner.html  rover.html
docs/_modules/modrover/strategies/: backward.html  base.html  forward.html  full.html
docs/_sources/: installation.rst.txt
docs/_sources/api_reference/: modrover.rover.rst.txt  modrover.strategies.rst.txt
docs/_static/css/: custom.css
docs/api_reference/: index.html  modrover.learner.html  modrover.learner.rst  modrover.rover.html  modrover.strategies.html
sphinx/: conf.py  index.rst  installation.rst
sphinx/tables/: quickstart_learner_info.csv  quickstart_summary.csv
src/modrover/: __about__.py  __init__.py  api.py  exceptions.py  globals.py  info.py  learner.py  learnerid.py  main.py  model.py  modelhub.py  modelid.py  rover.py  strategies.py  synthesizer.py  types.py  visualizer.py
src/modrover/strategies/: __init__.py  backward.py  backward_explore.py  base.py  down_explore.py  forward.py  forward_explore.py  full.py  full_explore.py  up_explore.py
src/rover/: __about__.py
tests/: conftest.py  test_learner.py  test_learnerid.py  test_model_class.py  test_modelid.py  test_rover.py  test_strategies.py
tests/integration/: test_ensembles.py  test_integration.py
