[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modrover"
version = "0.1.0"
description = "Model space explorer for inference and prediction"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = ["regmod==0.1.0", "pplkit", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
github = "https://github.com/ihmeuw-msca/modrover"
