[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modrover"
version = "0.1.1"
description = "Model space explorer for inference and prediction"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = ["regmod==0.1.0", "pplkit", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/modrover"

[tool.sphinx]
project = "modrover"
author = "IHME Math Sciences"
copyright = "2023, IHME Math Sciences"
version = "0.1.1"
