[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modrover"
version = "0.2.0"
description = "Model space explorer for inference and prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
]
dependencies = [
    "regmod<0.2",
    "pplkit",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/modrover"
